--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -9,6 +9,14 @@
 			<trans-unit id="tx_mia3search_domain_model_search.name">
 				<source>Name</source>
 			</trans-unit>
+			<trans-unit id="tx_mia3search_search.results">
+				<source>%1$s results</source>
+				<target>%1$s results</target>
+			</trans-unit>
+			<trans-unit id="tx_mia3search_search.search">
+				<source>search</source>
+				<target>search</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
