--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -7,9 +7,6 @@
 				<source>search</source>
 				<target>Finden</target>
 			</trans-unit>
-			<trans-unit id="tx_mia3search_domain_model_search.name">
-				<source>Name</source>
-			</trans-unit>
 			<trans-unit id="tx_mia3search_search.results">
 				<source>%1$s results</source>
 				<target>%1$s Ergebnisse gefunden</target>
@@ -25,6 +22,10 @@
 			<trans-unit id="tx_mia3search_search.input_placeholder">
 				<source>Your search phrase</source>
 				<target>Suchbegriff</target>
+			</trans-unit>
+			<trans-unit id="tx_mia3search_search.resultsRange">
+				<source>Showing Results %1$s to %2$s of %3$s</source>
+				<target>Suchergebnisse %1$s bis %2$s von %3$s</target>
 			</trans-unit>
 		</body>
 	</file>
