--- a/Resources/Private/Language/locallang.xlf
+++ b/Resources/Private/Language/locallang.xlf
@@ -25,6 +25,10 @@
 				<source>Your search phrase</source>
 				<target>search</target>
 			</trans-unit>
+			<trans-unit id="tx_mia3search_search.resultsRange">
+				<source>Showing Results %1$s to %2$s of %3$s</source>
+				<target>Showing Results %1$s to %2$s of %3$s</target>
+			</trans-unit>
 		</body>
 	</file>
 </xliff>
