add translation for singular result

--- a/Resources/Private/Language/de.locallang.xlf
+++ b/Resources/Private/Language/de.locallang.xlf
@@ -7,6 +7,10 @@
 				<source>search</source>
 				<target>Finden</target>
 			</trans-unit>
+			<trans-unit id="tx_mia3search_search.result">
+				<source>%1$s result</source>
+				<target>%1$s Ergebniss gefunden</target>
+			</trans-unit>
 			<trans-unit id="tx_mia3search_search.results">
 				<source>%1$s results</source>
 				<target>%1$s Ergebnisse gefunden</target>
