--- a/Resources/Private/Language/fr.locallang.xlf
+++ b/Resources/Private/Language/fr.locallang.xlf
@@ -11,6 +11,10 @@
 				<source>%1$s results</source>
 				<target>%1$s résultats trouvé</target>
 			</trans-unit>
+			<trans-unit id="tx_mia3search_search.result">
+				<source>%1$s result</source>
+				<target>%1$s résultat trouvé</target>
+			</trans-unit>
 			<trans-unit id="tx_mia3search_search.no_results">
 				<source>no results found</source>
 				<target>Aucun résultat trouvé.</target>
